Build fails with CMake + Visual Studio 2017 + WinRT projects
-
Tools
- Visual Studio 2017
- CMake (I used 3.13.3)
-
Reproduction
- Clone https://gitlab.com/W4n/winrt-cmake
- Run
./setup.sh
- Build both projects
There are 2 WinRT projects (C++/CX). The project winrt-lib2 depends on the other one (winrt-lib1). The build is failing because of this dependency, winrt-lib2 cannot use winrt-lib1 symbols (error C2871).
I set this property VS_WINRT_COMPONENT TRUE
for both projects but it does not seem enough.
Did I miss something ?
This kind of setup was working with Visual Studio 2015.
Edited by Erwan J